# snapp

./: .gitignore  .replit  CMakeLists.txt  compile_commands.json  example-ast.txt  example.snapp  replit.nix
include/: keyword.h  syntaxError.h  token.h  tokenizer.h
include/error/: runtimeError.h  syntaxError.h
include/native/: NativeGroup.h  nativeGroup.h
include/native/root/: RootIO.h  rootArray.h  rootDate.h  rootExternal.h  rootIO.h  rootRandom.h  rootString.h
include/package/: plugin.h  pluginLoader.h
include/semantics/: astRunner.h  scope.h
include/syntax/: abstractSyntaxTree.h  dataType.h  dataValue.h  functionGroup.h  keyword.h  operation.h  sourceLocation.h  symbol.h  syntaxNode.h  token.h  tokenizer.h
include/value/: class.h  dataType.h  dataValue.h  function.h  import.h  object.h  primitive.h
samples/: array.snapp  assignNumberWithLiteral.snapp  basic-io.snapp  classTest.snapp  date.snapp  declareFunction.snapp  example.snapp  fizzBuzz.snapp  funky.snapp  printVariable.snapp  temp.snapp
samples/old/: basic-io.snapp  example.snapp
src/: keyword.cpp  main.cpp  sourceLocation.cpp  symbol.cpp  syntaxError.cpp  token.cpp  tokenizer.cpp
src/error/: runtimeError.cpp  syntaxError.cpp
src/native/: NativeGroup.cpp  nativeGroup.cpp
src/package/: pluginLoader.cpp
src/semantics/: astRunner.cpp  scope.cpp
src/syntax/: abstractSyntaxTree.cpp  dataType.cpp  functionGroup.cpp  keyword.cpp  operation.cpp  sourceLocation.cpp  symbol.cpp  syntaxNode.cpp  token.cpp  tokenizer.cpp
src/value/: class.cpp  dataType.cpp  dataValue.cpp  function.cpp  import.cpp  object.cpp
(+9 files in other folders)
